[package]
name = "youtube-downloader"
version = "0.0.0"
description = "Youtube-Downloader"
authors = ["wisrude"]
edition = "2021"

[lib]
name = "youtube_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
dirs = "3.0.2"
tokio = { version = "1", features = ["full"] }
rusty_ytdl = "0.7.2"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
actix-web = "4"
serde_json = "1"
